Reorganizar proyecto para Netlify

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- AOS CDN -->
     <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet">
     <!-- Styles -->
-    <link href="./css/output.css" rel="stylesheet">
+    <link href="css/output.css" rel="stylesheet">
     <title>Porfolio - Daniel Illana</title>
 </head>
 <body class="min-h-screen bg-linear-to-b from-red-950 via-neutral-900 to-neutral-800 font-[Montserrat]">
