Añadiendo estilos a los botones de la sección proyectos

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                         <div class="w-full flex justify-center md:justify-start md:ml-5">
                             <a href="https://github.com/Proyecto-last-glitch/Proyecto_Grupo1"
                                target="_blank"
-                               class="group block w-70 text-center bg-white text-black font-bold px-4 py-2 my-10 rounded-lg 
+                               class="group block sm:w-70 text-center bg-white text-black font-bold px-4 py-2 my-10 rounded-lg 
                              hover:bg-black hover:text-white transition duration-200">
                             <i class="fa-brands fa-github text-2xl mr-2 transition-colors duration-200 group-hover:text-white"></i>
                             Ver Proyecto en Github
@@ -180,7 +180,7 @@
                         <div class="w-full flex justify-center md:justify-start md:ml-5">
                             <a href="https://github.com/DanielIllalb/Carpe-Diem-WebApp"
                                target="_blank"
-                               class="group block w-70 text-center bg-white text-black font-bold px-4 py-2 my-10 rounded-lg 
+                               class="group block sm:w-70 text-center bg-white text-black font-bold px-4 py-2 my-10 rounded-lg 
                              hover:bg-black hover:text-white transition duration-200">
                             <i class="fa-brands fa-github text-2xl mr-2 transition-colors duration-200 group-hover:text-white"></i>
                             Ver Proyecto en Github
