se modifican las animaciones css

--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
 
             
             <!-- Proyectos -->
-            <div id="projects" class="w-full h-520 lg:h-320 mt-40 p-10">
+            <div id="projects" data-aos="fade-down" class="w-full h-520 lg:h-320 mt-40 p-10">
                 <h2 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl text-red-700 text-center font-[Elixir] my-20">Proyectos</h2>
                 <section class="flex flex-col items-center lg:flex-row lg:justify-center gap-20">
                     <!-- Proyecto 1 -->
-                    <article data-aos="fade-right" class="bg-neutral-800/60 rounded-2xl w-full sm:w-96 md:w-[32rem] lg:w-140 min-h-[45rem] mt-5 border-3 border-red-500 shadow-xl shadow-red-700/50 shadow-gray-400 flex flex-col justify-between">
+                    <article class="bg-neutral-800/60 rounded-2xl w-full sm:w-96 md:w-[32rem] lg:w-140 min-h-[45rem] mt-5 border-3 border-red-500 shadow-xl shadow-red-700/50 shadow-gray-400 flex flex-col justify-between">
                         <img 
                             class="w-full h-60 md:h-80 object-cover rounded-t-xl" 
                             src="assets/img/Last_Glitch.jpg"
@@ -158,7 +158,7 @@
                     </article>
 
                     <!-- Proyecto 2 -->
-                    <article data-aos="fade-left" class="bg-neutral-800/60 rounded-2xl w-full sm:w-96 md:w-[32rem] lg:w-140 min-h-[45rem] mt-5 border-3 border-red-500 shadow-xl shadow-red-700/50 shadow-gray-400 flex flex-col justify-between scroll-mt[50vh]">
+                    <article class="bg-neutral-800/60 rounded-2xl w-full sm:w-96 md:w-[32rem] lg:w-140 min-h-[45rem] mt-5 border-3 border-red-500 shadow-xl shadow-red-700/50 shadow-gray-400 flex flex-col justify-between scroll-mt[50vh]">
                         <img 
                             class="w-full h-60 md:h-80 object-cover rounded-t-xl"
                             src="assets/img/proyecto_CarpeDiem.JPG"
